--- a/img2spectrum.vcxproj
+++ b/img2spectrum.vcxproj
@@ -93,12 +93,12 @@
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
       <PreprocessorDefinitions>WIN32;_DEBUG;_WINDOWS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <AdditionalIncludeDirectories>\libraries\sdl2\include</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>..\libraries\sdl2\include</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalLibraryDirectories>\libraries\sdl2\lib\x86</AdditionalLibraryDirectories>
+      <AdditionalLibraryDirectories>..\libraries\sdl2\lib\x86</AdditionalLibraryDirectories>
       <AdditionalDependencies>sdl2main.lib;sdl2.lib;opengl32.lib;kernel32.lib;user32.lib;gdi32.lib;winspool.lib;comdlg32.lib;advapi32.lib;shell32.lib;ole32.lib;oleaut32.lib;uuid.lib;odbc32.lib;odbccp32.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
